<resources>
    <string name="app_name">WebView Tool</string>

    <string name="tab_config_title">Setting</string>
    <string name="tab_logs_title">Log</string>
    <string name="tab_webview_title">WebView</string>

    <string name="share">Share</string>
    <string name="log_view_menu_share">Share logs</string>
    <string name="log_view_menu_search">Search logs</string>
    <string name="share_logs_subject">WebView logs</string>
    <string name="share_logs_message">Please see collected logs in the attachment.</string>

    <string name="webview_refresh">Refresh</string>
    <string name="webview_empty">No URL loaded</string>

    <string name="config_clear_log">Clear</string>
    <string name="config_url_hint">URL</string>
    <string name="config_load_url">Go</string>
    <string name="config_default_url">http://</string>
    <string name="config_trust_ssl_title">SSL</string>
    <string name="config_remember_url_title">URL Save</string>
    <string name="config_user_agent_title">User-Agent</string>
    <string name="config_user_agent_save">Save</string>
    <string name="config_user_agent_reset">Reset</string>
    <string name="config_user_agent_switch">Overwrite</string>
    <string name="config_user_agent_empty_message">Enter UA</string>
    <string name="config_user_agent_invalid_message">END OD LINE characters not allowed.</string>

    <string name="permission_denied_request_permission_button">Request Permission</string>
    <string name="permission_denied_message">Camera permission is required for loading URL from QR code.</string>

</resources>
